fixed: ripristinato overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -243,8 +243,8 @@ footer {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
-  //  overflow: hidden;
+  height: 130vh;
+  overflow: hidden;
 }
 .character-container {
   max-width: 600px;
@@ -303,8 +303,8 @@ footer {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
-  // overflow: hidden;
+  height: 130vh;
+  overflow: hidden;
 }
 body {
   box-sizing: border-box;
@@ -391,8 +391,8 @@ form {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
-  // overflow: hidden;
+  height: 130vh;
+  overflow: hidden;
 }
 
 //BattleList------------
